apps/habitTracker/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: habit
  labels:
    app.kubernetes.io/part-of: habitTracker
