apps/habitTracker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: habit
  labels:
    app.kubernetes.io/name: habit-ingress
    app.kubernetes.io/component: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - habit.thatinsaneguy.com
      secretName: habit-tls
  rules:
    - host: habit.thatinsaneguy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: habit-api
                port:
                  number: 9210
